force-app/main/default/objects/Statement__c/Statement__c.object-meta.xml
<CustomObject>
    <label>Statement</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Statement No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Statments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>