force-app/main/default/objects/Statement__c/fields/Rental_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Rental_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rental Agreement</label>
    <referenceTo>Rental_Agreement__c</referenceTo>
    <relationshipName>Statments</relationshipName>
    <type>Lookup</type>
</CustomField>